Uredjivanje bootstrap cards na index stranici

--- a/css/style.css
+++ b/css/style.css
@@ -459,7 +459,9 @@ hr.navdropdown{
 .models_main{
     background: rgb(223, 221, 221);
 }
-
+.models_main img{
+    width: 100%;
+}
 
 /*
  PARALLAX SECTION
