--- a/css/style.css
+++ b/css/style.css
@@ -557,7 +557,7 @@ hr.navdropdown{
 --------------------*/
 #admin{
     padding: 0px;
-    background: #e4e5e6;
+    background: #dfe1e2;
 }
 #admin-logo{
     margin-left: auto;
